--- a/index.html
+++ b/index.html
@@ -22,18 +22,14 @@
       <div id="root-grid"></div>
     </div>
   </div>
-  <!--load shows-->
-
-
+  <!--load the shows-->
   <script src="shows.js"></script>
-  <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
+  <!--to get All Episodes-->
   <script src="episodes.js"></script>
-
-  <!--load your js code 500 level and above 500-->
+  <!--loads level 500 and above-->
   <script src="script500.js"></script>
-  <!-- Loads YOUR javascript code -->
- 
-  <script src="script.js"></script>
+  <!--main script-->
+   <script src="script.js"></script>
 </body>
 
 </html>
